--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
         <!--Panneau 1-->
         <div class="leaflet-sidebar-header">
           <a href="https://agence-cohesion-territoires.gouv.fr/" target="_blank">
-            <img id="logo" src="img/logo_fthd_anct.jpg" class="logo-anct-marianne-fthd" width="90%">
+            <img id="logo" src="img/LOGO-ANCT+Marianne.png" class="logo-anct-marianne" width="90%">
+            <img id="logo" src="img/logo_fthd2.jpg" class="logo-fthd" width="90%">
           </a>
           <h4 class="titre-sidebar">Les opérateurs partenaires <br> France Très Haut Débit</h4>
           <span class="leaflet-sidebar-close" @click="sidebar.close()">
@@ -99,8 +100,8 @@
       <div class="leaflet-sidebar-pane" id="a-propos">
         <div class="leaflet-sidebar-header">
           <a href="https://agence-cohesion-territoires.gouv.fr/" target="_blank">
-            <img id="logo" src="img/logo_fthd_anct.jpg" class="logo-anct-marianne-fthd" width="90%">
-          </a>
+            <img id="logo" src="img/LOGO-ANCT+Marianne.png" class="logo-anct-marianne" width="90%">
+            <img id="logo" src="img/logo_fthd2.jpg" class="logo-fthd" width="90%">          </a>
           <h4 class="titre-sidebar">À propos</h4>
           <span class="leaflet-sidebar-close" @click="sidebar.close()">
             <i class="la la-step-backward"></i>
@@ -108,15 +109,17 @@
         </div>
         <div class="panel-content">
           <div class="text-anct">
-            <p>Agence de l’État créée en 2020, l’Agence nationale de la cohésion des territoires (ANCT) assure un rôle de « fabrique à projets » pour permettre aux collectivités de mener à bien leurs projets ; facilite l’accès des collectivités locales aux ressources nécessaires pour les concrétiser (ingénierie technique et financière, partenariats, subventions…) ; prend en compte les différences entre les territoires et adapte son action à leurs besoins.</p>
-            <p>Le Plan France Très Haut débit fixe des objectifs ambitieux pour la couverture en internet fixe des Français.
+            <p>Agence de l’État créée en 2020, l’<b>Agence nationale de la cohésion des territoires (ANCT) </b>assure un rôle de « fabrique à projets » pour permettre aux collectivités de mener à bien leurs projets ; facilite l’accès des collectivités locales aux ressources nécessaires pour les concrétiser (ingénierie technique et financière, partenariats, subventions…) ; prend en compte les différences entre les territoires et adapte son action à leurs besoins.</p>
+            <p><b>Le Plan France Très Haut débit</b> fixe des objectifs ambitieux pour la couverture en internet fixe des Français.
               Ce plan associe plusieurs dynamiques complémentaires : 
               d’une part, celle de l’initiative privée des opérateurs de communications électroniques dans les principales agglomérations et leurs périphéries
               (zone d’initiative privée) et d’autre part, celle de l’initiative publique portée par les collectivités territoriales
               (zone d’initiative publique) dans les zones les plus rurales.</p>
-            <p>Pour plus d'informations, vous pouvez nous contacter :
+              
+            <!-- <p>Pour plus d'informations, vous pouvez nous contacter :
               <a href="fthd@anct.gouv.fr" target="_blank">fthd@anct.gouv.fr</a>
-            <br><br></p>
+            <br><br></p> -->
+
             <span class="text-anct-petit"><b>Réalisation :</b>
               <p>Pôle analyse & diagnostics territoriaux - Cartographie - ANCT <br>           
                   Pour toutes questions, veuillez contacter :
@@ -139,8 +142,8 @@
       <!-- voir si on laisse cette classe qui ouvre un onglet sans icone -->
       <div class="leaflet-sidebar-pane" id="operateur">
         <div class="leaflet-sidebar-header">
-          <img src="img/logo_fthd_anct.jpg" alt="LOGO-ANCT" class="logo-anct-marianne-fthd">
-          <span class="leaflet-sidebar-close" @click="sidebar.close()">
+          <img id="logo" src="img/LOGO-ANCT+Marianne.png" class="logo-anct-marianne" width="90%">
+          <img id="logo" src="img/logo_fthd2.jpg" class="logo-fthd" width="90%">          <span class="leaflet-sidebar-close" @click="sidebar.close()">
             <i class="la la-step-backward"></i>
           </span>
         </div>
