mise au point - reglages écran

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  <!-- Leaflet.popup CSS -->
  <link rel="stylesheet" href="lib/leaflet.pm/dist/leaflet.pm.css" />
  <!--leaflet etiquettes-->
- <link rel="stylesheet" href="lib/leaflet.label.css" />
+ <!-- <link rel="stylesheet" href="lib/leaflet.label.css" /> -->
 
   <!-- Leaflet.awesome-markers CSS -->
   <link rel="stylesheet" href="lib/leaflet.awesome-markers/dist/leaflet.awesome-markers.css" />
@@ -36,10 +36,10 @@
   <!-- Leaflet.awesome-markers JavaScript -->
   <script src="lib/leaflet.awesome-markers/dist/leaflet.awesome-markers.min.js"></script>
  <!--leaflet etiquettes-->
-  <script rel="stylesheet" href="lib/leaflet.label.js"></script> 
+  <!-- <script rel="stylesheet" href="lib/leaflet.label.js"></script>  -->
 
   <!-- Leaflet.popup JavaScript -->
-  <script src="lib/leaflet.pm/dist/leaflet.pm.min.js"></script>
+  <!-- <script src="lib/leaflet.pm/dist/leaflet.pm.min.js"></script> -->
 
   <script src="lib/bootstrap-5.2.0-dist/js/bootstrap.bundle.min.js"></script>
   <script src="lib/jquery/dist/jquery.min.js"></script>
