--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
   <link href="lib/bootstrap-5.2.0-dist/css/bootstrap.min.css" rel="stylesheet"> 
  <!-- Leaflet.popup CSS -->
  <link rel="stylesheet" href="lib/leaflet.pm/dist/leaflet.pm.css" />
- <!--leaflet etiquettes-->
- <!-- <link rel="stylesheet" href="lib/leaflet.label.css" /> -->
 
   <!-- Leaflet.awesome-markers CSS -->
   <link rel="stylesheet" href="lib/leaflet.awesome-markers/dist/leaflet.awesome-markers.css" />
@@ -35,12 +33,6 @@
   <script src="lib/leaflet-sidebar-v2/js/leaflet-sidebar.min.js"></script>
   <!-- Leaflet.awesome-markers JavaScript -->
   <script src="lib/leaflet.awesome-markers/dist/leaflet.awesome-markers.min.js"></script>
- <!--leaflet etiquettes-->
-  <!-- <script rel="stylesheet" href="lib/leaflet.label.js"></script>  -->
-
-  <!-- Leaflet.popup JavaScript -->
-  <!-- <script src="lib/leaflet.pm/dist/leaflet.pm.min.js"></script> -->
-
   <script src="lib/bootstrap-5.2.0-dist/js/bootstrap.bundle.min.js"></script>
   <script src="lib/jquery/dist/jquery.min.js"></script>
   
@@ -137,7 +129,6 @@
           </div>
         </div>
         <!--Panneau 3 - Opérateur -->
-        <!-- voir si on laisse cette classe qui ouvre un onglet sans icone -->
         <div class="leaflet-sidebar-pane" id="operateur">
           <div class="leaflet-sidebar-header">
             <img id="logo" src="img/LOGO-ANCT+Marianne.png" class="logo-anct-marianne" width="90%">
@@ -151,11 +142,8 @@
             <div id= "card">
               <div class="card-header" ></div>
               <div class="card-body">
-                <ul class="titre-liste-operateurs"></ul>
-                <ul class="liste-operateurs" role="tablist"></ul>
-                <button id="bnt-retour-liste" ><i class="las la-arrow-circle-left"></i> Retour à la liste d'opérateur</button>
-                <div id="operateur-content"></div>
-                <button id="bnt-operateur" ><i class="las la-arrow-circle-down"></i> Plus d'informations sur les opérateurs </button>
+                <button id="bnt-retour-accueil" ><i class="las la-arrow-circle-left"></i> Retour à l'accueil</button>
+                 <div id="operateur-content"></div> 
               </div>
 
             </div>
