--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="utf-8" /> 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="img/favicon.ico" type="image/ico"/>
   <title> Opérateurs partenaires - France très haut débit</title> 
 
@@ -111,7 +113,7 @@
                 
 
               <span class="text-anct-petit"><b>Réalisation :</b>
-                <p>Pôle analyse & diagnostics territoriaux - Cartographie - ANCT <br>           
+                <p>Pôle analyse & diagnostics territoriaux -<a href="https://cartotheque.anct.gouv.fr/cartes" target="_blank"> Cartographie - ANCT </a><br>           
                     Pour toutes questions, veuillez contacter :
                   <a href="cartographie@anct.gouv.fr" target="_blank">cartographie@anct.gouv.fr</a>
                 </p>
